crates/cli/tests/snapshots/dns__dns_install_reports_missing_daemon_after_installing_resolver_config.snap
---
source: crates/cli/tests/dns.rs
expression: "(output, prepared_path, prepared_config, system_resolver_config,\nenvironment.operations.borrow().clone(),)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "Prepared PV DNS resolver config\n  path: <tempdir>/home/.pv/config/resolver/test\n  DNS resolver port: <dns-port>\nInstalled system resolver config: <tempdir>/etc/resolver/test\nPV daemon is not running; .test lookups will not resolve yet.\nRun `pv setup` or `pv daemon:enable`, then retry `pv dns:install`.\n  socket: <tempdir>/home/.pv/run/pv.sock\n",
        stderr: "",
    },
    "<tempdir>/home/.pv/config/resolver/test",
    "# Managed by PV\n# Source: PV prepared resolver config for /etc/resolver/test\nnameserver 127.0.0.1\nport <dns-port>\n",
    "# Managed by PV\n# Source: PV prepared resolver config for /etc/resolver/test\nnameserver 127.0.0.1\nport <dns-port>\n",
    [
        "install resolver <tempdir>/home/.pv/config/resolver/test -> <tempdir>/etc/resolver/test",
    ],
)
