crates/cli/tests/snapshots/dns__dns_install_writes_prepared_and_system_resolver_config.snap
---
source: crates/cli/tests/dns.rs
expression: "(output, prepared_path, prepared_config, parsed_config,\nsystem_resolver_config, environment.operations.borrow().clone(),\ndaemon_requests,)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Prepared PV DNS resolver config\n  path: <tempdir>/home/.pv/config/resolver/test\n  DNS resolver port: <dns-port>\nPV daemon is running.\nInstalled system resolver config: <tempdir>/etc/resolver/test\n",
        stderr: "",
    },
    "<tempdir>/home/.pv/config/resolver/test",
    "# Managed by PV\n# Source: PV prepared resolver config for /etc/resolver/test\nnameserver 127.0.0.1\nport <dns-port>\n",
    ResolverConfig {
        port: <dns-port>,
    },
    "# Managed by PV\n# Source: PV prepared resolver config for /etc/resolver/test\nnameserver 127.0.0.1\nport <dns-port>\n",
    [
        "install resolver <tempdir>/home/.pv/config/resolver/test -> <tempdir>/etc/resolver/test",
    ],
    [
        "{\"protocol_version\":2,\"command\":\"health\"}",
    ],
)
