crates/cli/tests/snapshots/dns__dns_uninstall_removes_prepared_config_and_defers_pv_owned_system_removal.snap
---
source: crates/cli/tests/dns.rs
expression: "(output, prepared_path, prepared_after_uninstall, system_resolver_path,\nsystem_after_uninstall,)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "Deleted prepared DNS resolver config: <tempdir>/home/.pv/config/resolver/test\nPV-owned system resolver config remains: <tempdir>/etc/resolver/test\nPrivileged removal deferred to later setup/system-integration work.\n",
        stderr: "",
    },
    "<tempdir>/home/.pv/config/resolver/test",
    None,
    "<tempdir>/etc/resolver/test",
    "# Managed by PV\n# Source: PV prepared resolver config for /etc/resolver/test\nnameserver 127.0.0.1\nport 35353\n",
)
